--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.4
+specVersion: 0.0.5
 schema:
   file: ./schema.graphql
 templates:
@@ -27,19 +27,23 @@ templates:
             handler: handleStake
           - event: Sponsor(indexed address,uint256)
             handler: handleSponsor
-          - event: ReturnStake(indexed address,address[],uint256)
+          - event: ApproveForParticipants(indexed address,address[])
+            handler: handleApproveForParticipants
+          - event: ReturnStake(indexed address,uint256,uint256,uint256)
             handler: handleReturnStake
           - event: DistributeUnreturnedStake(indexed address,address[],uint256,uint256)
             handler: handleDistributeUnreturnedStake
           - event: DistributeSponsorContribution(indexed address,address[],uint256,uint256)
             handler: handleDistributeSponsorContribution
+          - event: DistributeFees(indexed address,uint256,address,uint256,address,uint256,address[],uint256)
+            handler: handleDistributeFees
 
 dataSources:
   - kind: ethereum/contract
     name: PepperStakeDeployer
     network: goerli
     source:
-      address: '0x2d328072a0892925d6b9cdb017724d4978c04792'
+      address: '0x6f29B7F8924BAeF35e20Db6c8AC088b8dDE87399'
       abi: PepperStakeDeployer
       startBlock: 7893000
     mapping:
@@ -52,6 +56,7 @@ dataSources:
         - name: PepperStakeDeployer
           file: ./src/abis/PepperStakeDeployer.json
       eventHandlers:
-        - event: DeployPepperStake(indexed address,address[],uint256,address[],uint256,uint256,bool,bool,string)
+        - event: DeployPepperStake(indexed address,uint256,(address[],address[],address[],address[],uint256[],uint256,uint256,bool,bool,bool,uint256,address,uint256,string),uint256,address)
           handler: handleDeployPepperStake
+          receipt: true
       file: ./src/mappings/pepperStakeDeployer.ts
